RESOLVED FIXED55462
FEMorphologyElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=55462
Summary FEMorphologyElement changes doesn't require relayout.
Renata Hodovan
Reported 2011-03-01 05:29:16 PST
FEMorphologyElement changes doesn't require relayout.
Attachments
Proposed patch (5.47 KB, patch)
2011-03-01 05:37 PST, Renata Hodovan
kling: review-
Proposed patch (5.23 KB, patch)
2011-03-01 07:22 PST, Renata Hodovan
no flags
Renata Hodovan
Comment 1 2011-03-01 05:37:11 PST
Created attachment 84218 [details] Proposed patch SVGFECompositeElement.cpp is in ChangeLog, but it has just a style fix.
Andreas Kling
Comment 2 2011-03-01 07:00:19 PST
Comment on attachment 84218 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=84218&action=review r=me > Source/WebCore/ChangeLog:18 > + * svg/SVGFECompositeElement.cpp: The whitespace change does not belong in this patch, please leave it out.
Andreas Kling
Comment 3 2011-03-01 07:02:31 PST
Comment on attachment 84218 [details] Proposed patch Oops, this is missing modifications to SVGFEMorphologyElement::svgAttributeChanged()!
Renata Hodovan
Comment 4 2011-03-01 07:22:26 PST
Created attachment 84227 [details] Proposed patch
Renata Hodovan
Comment 5 2011-03-02 00:42:56 PST
Note You need to log in before you can comment on or make changes to this bug.