FEMorphologyElement changes doesn't require relayout https://bugs.webkit.org/show_bug.cgi?id=55462

Reviewed by Andreas Kling.

When the FEMorphologyElement receives an update message but the given value remains the same we don't need
to relayout the filter.

No new tests are needed because this modification is covered by the dynamic update tests of FEMorphology.

* platform/graphics/filters/FEMorphology.cpp:
(WebCore::FEMorphology::setMorphologyOperator):
(WebCore::FEMorphology::setRadiusX):
(WebCore::FEMorphology::setRadiusY):
* platform/graphics/filters/FEMorphology.h:
* svg/SVGFEMorphologyElement.cpp:
(WebCore::SVGFEMorphologyElement::setFilterEffectAttribute):
(WebCore::SVGFEMorphologyElement::svgAttributeChanged):
* svg/SVGFEMorphologyElement.h:



Canonical link: https://commits.webkit.org/69996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80099 268f45cc-cd09-0410-ab3c-d52691b4dbfc